apps/argocd/base/namespace.yaml
# create a namespace for argocd
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/created-by: kustomize
  annotations:
    argocd.argoproj.io/sync-options: CreateNamespace=true
